# huff

./: .gitignore  CMakeLists.txt  bpe.cpp  bpe.hpp  file_huffman.cpp  file_huffman.hpp  main.cpp
include/: args.hpp  huff.hpp  jsrt.hpp  token.hpp
python/: hffl.py  huff.py
src/: args.cpp  huff.cpp  jsrt.cpp  vacob.js  vocab.js
